--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,15 @@ RPC_URL=your_sepolia_rpc_url
 # Required - Wallet private key (without 0x prefix)
 PRIVATE_KEY=your_private_key
 
-# Auto-generated - Contract address (filled by deploy script)
+# Contract address 
 CONTRACT_ADDRESS=
 
 # Optional - Etherscan API key for verification
-ETHERSCAN_API_KEY=your_etherscan_key 
+ETHERSCAN_API_KEY=your_etherscan_key
+
+# Deployed contract address
+TOKEN_ADDRESS=
+
+# RPC URLs for different networks
+SEPOLIA_RPC_URL=
+MAINNET_RPC_URL= 
