chore: update workflows to install OpenZeppelin and forge-std dependencies

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,6 +24,11 @@ jobs:
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
+
+      - name: Install Dependencies
+        run: |
+          forge install foundry-rs/forge-std
+          forge install OpenZeppelin/openzeppelin-contracts
         
       - name: Install Slither
         run: |
