--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Python
         uses: actions/setup-python@v4
@@ -27,8 +28,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          forge install foundry-rs/forge-std
-          forge install OpenZeppelin/openzeppelin-contracts
+          git submodule add https://github.com/foundry-rs/forge-std lib/forge-std
+          git submodule add https://github.com/OpenZeppelin/openzeppelin-contracts lib/openzeppelin-contracts
+          git submodule update --init --recursive
         
       - name: Install Slither
         run: |
