chore: remove simulation flag from deployment checks workflow

--- a/.github/workflows/deployment-checks.yml
+++ b/.github/workflows/deployment-checks.yml
@@ -43,8 +43,7 @@ jobs:
         run: |
           forge script script/Deploy.s.sol:DeployScript \
           --fork-url https://eth-sepolia.public.blastapi.io \
-          -vvv \
-          --simulate
+          -vvv
 
   verify-contract-size:
     name: Contract size check
