feat: add git hooks for pre-commit checks and testing

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,15 @@
-# Required - Sepolia RPC endpoint
-ANVIL_RPC_URL=your_sepolia_rpc_url
-
-# Required - Wallet private key (without 0x prefix)
-PRIVATE_KEY=your_private_key
-
-# Contract address 
-CONTRACT_ADDRESS=
-
-# Optional - Etherscan API key for verification
-ETHERSCAN_API_KEY=your_etherscan_key
-
-# Deployed contract address
-TOKEN_ADDRESS=
-
-# RPC URLs for different networks
+# Network RPC URLs
 SEPOLIA_RPC_URL=
-MAINNET_RPC_URL= 
+MAINNET_RPC_URL=
+
+# Wallet Configuration (with 0x prefix)
+PRIVATE_KEY=
+
+# Contract Information
+TOKEN_ADDRESS= # Will be set automatically after deployment
+
+# API Keys
+ETHERSCAN_API_KEY=
+
+# Optional Network Configuration
+CHAIN_ID=  # Leave empty to auto-detect, or set to override (1=Mainnet, 11155111=Sepolia) 
