feat: implement UUPS upgradeable proxy for ParityToken and update deployment scripts

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,10 @@ MAINNET_RPC_URL=
 # Wallet Configuration (with 0x prefix)
 PRIVATE_KEY=
 
-# Contract Information
+# Contract Information (Auto-populated by deployment scripts)
 TOKEN_ADDRESS= # Will be set automatically after deployment
+PROXY_ADDRESS= # Will be set automatically after deployment
+IMPLEMENTATION_ADDRESS= # Will be set automatically after deployment
 
 # API Keys
 ETHERSCAN_API_KEY=
